removed 'purchase n times to unlock'

--- a/index.html
+++ b/index.html
@@ -111,13 +111,11 @@
         </div>
       </div>
       <div class="tabcontent" id="tabMp">
-        <div>
-          <h2 class="center">Memory</h2>
-          <div class="inline" style="height: 1em;">
-            <p class="center">คุณมี&ensp;</p>
-            <h3 id="mpAmount" class="center purple">0</h3>
-            <p class="center">&ensp;mp</p>
-          </div>
+        <h2 class="center">Memory</h2>
+        <div class="inline" style="height: 1em;">
+          <p class="center">คุณมี&ensp;</p>
+          <h3 id="mpAmount" class="center purple">0</h3>
+          <p class="center">&ensp;mp</p>
         </div>
         <hr>
         <div class="scrollable" style="max-height: 60vh;">
@@ -162,9 +160,9 @@
             </div>
           </div>
 
-          <p style="margin-top: .5em; margin-bottom: .5em;">กีกี้ - ปลดล็อกที่การซื้อ 3 ครั้ง</p>
+          <p style="margin-top: .5em; margin-bottom: .5em;">กีกี้</p>
           <div>
-            <div class="tab" id="mp21Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ซื้อ Autoclicker</p>
                 <div class="flex-start">
@@ -176,9 +174,8 @@
                 <span id="mp21Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp21Locked"><p class="ma">Locked</p></div>
 
-            <div class="tab" id="mp22Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ความเร็ว +0.5 ต่อ Autoclicker</p>
                 <div class="flex-start">
@@ -190,12 +187,11 @@
                 <span id="mp22Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp22Locked"><p class="ma">Locked</p></div>
           </div>
 
-          <p style="margin-top: .5em; margin-bottom: .5em;">Im - ปลดล็อกที่การซื้อ 8 ครั้ง</p>
+          <p style="margin-top: .5em; margin-bottom: .5em;">Im</p>
           <div>
-            <div class="tab" id="mp31Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ซื้อ Im</p>
                 <div class="flex-start">
@@ -207,9 +203,8 @@
                 <span id="mp31Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp31Locked"><p class="ma">Locked</p></div>
 
-            <div class="tab" id="mp32Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ปลดล็อก Autobuyer</p>
                 <div class="flex-start">
@@ -220,12 +215,11 @@
                 <span id="mp32Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp32Locked"><p class="ma">Locked</p></div>
           </div>
 
-          <p style="margin-top: .5em; margin-bottom: .5em;">Im - ปลดล็อกที่การซื้อ 8 ครั้ง</p>
+          <p style="margin-top: .5em; margin-bottom: .5em;">Im - ปลดล็อกที่การซื้อ 15 ครั้ง</p>
           <div>
-            <div class="tab" id="mp41Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ซื้อ Im</p>
                 <div class="flex-start">
@@ -237,9 +231,8 @@
                 <span id="mp41Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp41Locked"><p class="ma">Locked</p></div>
 
-            <div class="tab" id="mp42Unlocked">
+            <div class="tab">
               <div class="width-55">
                 <p style="margin-top: 0;">ปลดล็อก Autobuyer</p>
                 <div class="flex-start">
@@ -250,7 +243,6 @@
                 <span id="mp42Cost"></span>
               </button>
             </div>
-            <div class="tab" id="mp42Locked"><p class="ma">Locked</p></div>
           </div>
         </div>
 
