--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
       <div class="tabcontent" id="tabAm">
         <div>
           <h2 class="center">Automation</h2>
-          <div class="space-between" style="width: 200px; margin: 0 auto;">
-            <p>Im</p>
+          <div class="space-between" style="width: 180px; margin: 0 auto;" id="imAbToggleDiv">
+            <p>Impression</p>
             <label class="switch">
-              <input type="checkbox">
+              <input type="checkbox" id="imAbToggleCheckbox" onchange="imAbToggle(this)">
               <span class="slider round"></span>
             </label>
           </div>
