bugfixes and improvements

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <span id="clickSlider" class="click-slider"></span>
           </button>
           <div class="space-between" id="imAcDisplay">
-            <p class="gray-text width-50">จำนวน Autoclicker กีกี้: <span class="gray-text" id="imAcAmount">0</span></p>
-            <p class="gray-text width-50">ความเร็วกีกี้: <span class="gray-text" id="imAcPc">0</span></p>
+            <p class="gray-text width-50">จำนวน Autoclicker: <span class="gray-text" id="imAcAmount">0</span></p>
+            <p class="gray-text width-50">ความเร็ว Autoclicker: <span class="gray-text" id="imAcPc">0</span></p>
           </div>
 
           <hr>
@@ -199,7 +199,7 @@
           <div>
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">×1.01 ทุก ๆ การซื้อ im นั้น ๆ</p>
+                <p style="margin-top: 0;">impression ×1.01 ในทุก ๆ การซื้อ impression นั้น ๆ</p>
                 <div class="flex-start">
                   <p class="tab-text" id="mp31Level">0</p>
                 </div>
