--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="amount-div">
         <p class="center">คุณมี</p>
         <h1 id="imAmount" class="center amount blue">0</h1>
-        <p class="center">im</p>
+        <p class="center">impressions</p>
       </div>
       <div class="inline center" style="height: 16px; margin-top: 10px;">
         <p id="imRate" class="dark-blue">0.00</p>
@@ -33,8 +33,8 @@
       </div>
       <div class="space-around" style="gap: .3em; max-width: 360px; width: 90vw; margin: auto; margin-top: 13px;">
         <button id='buttonIm' class="tablinks active" onclick="openTab(event, 'tabIm')">Im</button>
-        <button id='buttonMp' class="tablinks" onclick="openTab(event, 'tabMp')">Mp</button>
-        <button id='buttonFp' class="tablinks" onclick="openTab(event, 'tabFp')">Fp</button>
+        <button id='buttonMe' class="tablinks" onclick="openTab(event, 'tabMe')">Me</button>
+        <button id='buttonFg' class="tablinks" onclick="openTab(event, 'tabFg')">Fg</button>
         <button id='buttonDr' class="tablinks" onclick="openTab(event, 'tabDr')">Dr</button>
         <button id='buttonAm' class="tablinks" onclick="openTab(event, 'tabAm')">Am</button>
         <button id='buttonAc' class="tablinks" onclick="openTab(event, 'tabAc')">Ac</button>
@@ -60,15 +60,13 @@
     <div style="margin: 0; margin-top: 160px; width: 90vw; max-width: 360px;">
       <div class="tabcontent" id="tabIm">
         <div>
-          <h2 class="center">Ims</h2>
+          <h2 class="center">Impression</h2>
           <button id="imClickButton" onclick="imClick(event)" class="button" style="display: block; height: 5em;">
             คลิก
             <span id="clickSlider" class="click-slider"></span>
           </button>
-          <div class="space-between" id="imAcDisplay">
-            <p class="gray-text width-50">จำนวน Autoclicker: <span class="gray-text" id="imAcAmount">0</span></p>
-            <p class="gray-text width-50">ความเร็ว Autoclicker: <span class="gray-text" id="imAcPc">0</span></p>
-          </div>
+          <p class="gray-text center" id="imAcStatus">ความเร็ว Autoclicker: <span class="gray-text"
+              id="imAcSpeed">0</span></p>
 
           <hr>
 
@@ -79,7 +77,7 @@
             <div id="ims" class="scrollable" style="max-height: 36vh;">
               <div class="tab" id="im1">
                 <div class="width-55">
-                  <p style="margin-top: 0;">First</p>
+                  <p style="margin-top: 0;">First Impression</p>
                   <div class="space-between">
                     <div class="flex-start width-45">
                       <p id="im1Mult" class="tab-text">1</p>
@@ -117,12 +115,12 @@
           </div>
         </div>
       </div>
-      <div class="tabcontent" id="tabMp">
+      <div class="tabcontent" id="tabMe">
         <h2 class="center">Memory</h2>
         <div class="inline" style="height: 1em;">
           <p class="center">คุณมี&ensp;</p>
           <h3 id="mpAmount" class="center purple">0</h3>
-          <p class="center">&ensp;mp</p>
+          <p class="center">&ensp;memory points</p>
         </div>
         <hr>
         <div class="scrollable" style="max-height: 45vh;">
@@ -142,7 +140,7 @@
             </div>
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">รับ memory ×2 ต่อการเก็บไว้ในความทรงจำ</p>
+                <p style="margin-top: 0;">รับ memory points ×2 ต่อการเก็บไว้ในความทรงจำ</p>
                 <div class="flex-start">
                   <p class="tab-text">ขณะนี้: ×</p>
                   <p class="tab-text" id="mp12Level">0</p>
@@ -173,7 +171,7 @@
               <div class="width-55">
                 <p style="margin-top: 0;">ซื้อ Autoclicker</p>
                 <div class="flex-start">
-                  <p class="tab-text">ขณะนี้: ×</p>
+                  <p class="tab-text">ขณะนี้:&nbsp;</p>
                   <p class="tab-text" id="mp21Level">0</p>
                 </div>
               </div>
@@ -181,17 +179,28 @@
                 <span id="mp21Cost"></span>
               </button>
             </div>
-
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">Autoclicker ความเร็ว ×2</p>
+                <p style="margin-top: 0;">ความเร็ว Autoclicker ×2</p>
                 <div class="flex-start">
-                  <p class="tab-text">ขณะนี้: ×</p>
+                  <p class="tab-text">ขณะนี้:&nbsp;</p>
                   <p class="tab-text" id="mp22Level">0</p>
                 </div>
               </div>
               <button class="tab-button width-40" id="mp22" onclick="memoryBuy(1, 1)">
                 <span id="mp22Cost"></span>
+              </button>
+            </div>
+            <div class="tab">
+              <div class="width-55">
+                <p style="margin-top: 0;">ความเร็ว Autoclicker ขึ้นอยู่กับ log<sub>2</sub> ของจำนวน memory points ที่มีอยู่</p>
+                <div class="flex-start">
+                  <p class="tab-text">ขณะนี้: ×</p>
+                  <p class="tab-text" id="mp23Level">0</p>
+                </div>
+              </div>
+              <button class="tab-button width-40" id="mp23" onclick="memoryBuy(1, 2)">
+                <span id="mp23Cost"></span>
               </button>
             </div>
           </div>
@@ -209,10 +218,9 @@
                 <span id="mp31Cost"></span>
               </button>
             </div>
-
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">n<sup>th</sup> impression ×2 ทุก ๆ การซื้อ impression นั้น ๆ </p>
+                <p style="margin-top: 0;">n<sup>th</sup> impression ×2 ทุก ๆ การซื้อ impression นั้น ๆ 10 ครั้ง</p>
                 <div class="flex-start">
                   <p class="tab-text" id="mp32Level">0</p>
                 </div>
@@ -223,7 +231,8 @@
             </div>
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">n<sup>th</sup> impression ×log(impression สูงสุดที่เคยได้รับ)</p>
+                <p style="margin-top: 0;">ทุก ๆ impression ×log<sub>10</sub> ของ impression สูงสุดที่เคยได้รับ
+                </p>
                 <div class="flex-start">
                   <p class="tab-text" id="mp33Level">0</p>
                 </div>
@@ -238,13 +247,39 @@
           <div>
             <div class="tab">
               <div class="width-55">
-                <p style="margin-top: 0;">ปลดล็อก Autobuyer</p>
+                <p style="margin-top: 0;">ปลดล็อก Impression Autobuyer</p>
                 <div class="flex-start">
                   <p class="tab-text" id="mp41Level">0</p>
                 </div>
               </div>
               <button class="tab-button width-40" id="mp41" onclick="memoryBuy(3, 0)">
                 <span id="mp41Cost"></span>
+              </button>
+            </div>
+            <div class="tab">
+              <div class="width-55">
+                <p style="margin-top: 0;">ปลดล็อก เก็บไว้ในความทรงจำ Autobuyer</p>
+                <div class="flex-start">
+                  <p class="tab-text" id="mp42Level">0</p>
+                </div>
+              </div>
+              <button class="tab-button width-40" id="mp42" onclick="memoryBuy(3, 1)">
+                <span id="mp42Cost"></span>
+              </button>
+            </div>
+          </div>
+
+          <p style="margin-top: .5em; margin-bottom: .5em;">ถาวร - จะไม่ถูกรีเซ็ตเมื่อรับ impression ใหม่</p>
+          <div>
+            <div class="tab">
+              <div class="width-55">
+                <p style="margin-top: 0;">เริ่มเกมด้วย 50 impressions และ ×2 ในทุก ๆ impression</p>
+                <div class="flex-start">
+                  <p class="tab-text" id="mp51Level">0</p>
+                </div>
+              </div>
+              <button class="tab-button width-40" id="mp51" onclick="memoryBuy(4, 0)">
+                <span id="mp51Cost"></span>
               </button>
             </div>
           </div>
@@ -255,7 +290,7 @@
         <div>
           <div class="prestige-div">
             <div class="width-55">
-              <p style="margin-top: 0; margin-bottom: 0;">รีเซ็ตทุกอย่างเพื่อแลกรับ<br><span>Sec</span> Im</p>
+              <p style="margin-top: 0; margin-bottom: 0;">รีเซ็ตทุกอย่างเพื่อรับ<br><span id="nextIm">Sec</span> Im</p>
               <!--div class="flex-start">
                 <p class="tab-text">รับ Im ต่อไปที่:&nbsp;</p>
                 <p id="mpPrestigeCost" class="tab-text">0</p>
@@ -271,13 +306,13 @@
         <hr>
 
       </div>
-      <div class="tabcontent" id="tabFp">
+      <div class="tabcontent" id="tabFg">
         <div>
           <h2 class="center">Forget</h2>
           <div class="inline" style="height: 1em;">
             <p class="center">คุณมี&ensp;</p>
             <h3 id="fpAmount" class="center pink">0</h3>
-            <p class="center">&ensp;fp</p>
+            <p class="center">&ensp;forget points</p>
           </div>
         </div>
         <hr>
@@ -315,12 +350,24 @@
       <div class="tabcontent" id="tabAm">
         <div>
           <h2 class="center">Automation</h2>
-          <div class="space-between" style="width: 180px; margin: 0 auto;" id="imAbToggleDiv">
+          <div class="space-between" style="width: 200px; margin: 0 auto;" id="imAbToggleDiv">
             <p>Impression</p>
             <label class="switch">
               <input type="checkbox" id="imAbToggleCheckbox" onchange="imAbToggle(this)">
               <span class="slider round"></span>
             </label>
+          </div>
+          <div style="margin: 0 auto; display: flex; flex-direction: column;" id="imAutoPrestigeToggleDiv">
+            <div style="width: 200px; margin: 0 auto;" class="space-between">
+              <p>เก็บไว้ในความทรงจำ</p>
+              <label class="switch">
+                <input type="checkbox" id="imAutoPrestigeToggleCheckbox" onchange="imAutoPrestigeToggle(this)">
+                <span class="slider round"></span>
+              </label>
+            </div>
+            <div>
+              <p style="margin: 0;" class="center">ทำงานเมื่อจะได้รับ ≥&nbsp;<input class="small-text-input" type="text" placeholder="0" id="imAutoPrestigeThreshold">&nbsp;mp</p>
+            </div>
           </div>
         </div>
       </div>
@@ -371,13 +418,15 @@
     </div>
   </div>
 
+  
   <script src="button-ripple.js"></script>
   <script src="newsticker.js"></script>
   <script src="break_eternity.js"></script>
   <script src="notation.js"></script>
   <script src="achievements.js"></script>
-
+  
   <script src="main.js"></script>
+  <script src="debug.js"></script>
   <script src="tab.js"></script>
   <script src="memory.js"></script>
   <script src="forget.js"></script>
