--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <h2 class="center">Forget</h2>
           <div class="inline" style="height: 1em;">
             <p class="center">คุณมี&ensp;</p>
-            <h3 id="fgAmount" class="center pink">0</h3>
+            <h3 id="fpAmount" class="center pink">0</h3>
             <p class="center">&ensp;forget points</p>
           </div>
         </div>
