--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>FIrst Impression</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Anuphan&display=swap');
-
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100;200;300;400;500;600;700;800;900&display=swap');
     * {
-      font-family: 'Anuphan', sans-serif;
+      /* font-family: 'Anuphan', sans-serif; */
+      font-family: 'Noto Sans Thai', sans-serif;
     }
   </style>
   <!link rel="stylesheet" href="style-raw.css">
